improvement to alignment in contact page and font blurriness, likewise logo is fixed now

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 #logo {
-  position: fixed;
+  position: absolute;
   width: 600px;
   left: 35px;
   top: 35px;
@@ -35,6 +35,7 @@ section {
 .contact {
   height: 100vh;
   width: 100%;
+  -webkit-filter: blur(0.000001px);
 }
 
 section.hero {
@@ -105,6 +106,10 @@ section.white {
   font-size: 28px;
   font-weight: bold;
   margin: 25px 0 25px;
+}
+
+#contact {
+padding-top: 8%;
 }
 
 .section.contact p {
